--- a/MQTT/FailuresToMqttTriggerTemplate.xaml
+++ b/MQTT/FailuresToMqttTriggerTemplate.xaml
@@ -31,6 +31,16 @@
                         Margin="5,0,0,0"
                         Text="{Binding Topic}"
                         TextAlignment="Left" />
+
+                    <TextBlock VerticalAlignment="Center" Margin="10,0,0,0" Text="|" />
+
+                    <TextBlock VerticalAlignment="Center" Margin="10,0,0,0" Text="QoS" />
+                    <ComboBox
+                        MinWidth="40"
+                        Margin="5,0,0,0"
+                        VerticalAlignment="Center"
+                        ItemsSource="{Binding QoSLevels}"
+                        SelectedIndex="{Binding QoS, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                 </StackPanel>
             </nina:SequenceBlockView.SequenceItemContent>
         </nina:SequenceBlockView>
