--- a/Options.xaml
+++ b/Options.xaml
@@ -664,6 +664,7 @@
                                     <RowDefinition />
                                     <RowDefinition />
                                     <RowDefinition />
+                                    <RowDefinition />
                                 </Grid.RowDefinitions>
 
                                 <TextBox
@@ -757,11 +758,25 @@
                                 BorderThickness="0"
                                 IsReadOnly="True"
                                 VerticalAlignment="Center"
+                                VerticalContentAlignment="Center"
+                                Text="$$UNIX_EPOCH$$" />
+                                <TextBlock
+                                Grid.Row="6"
+                                Grid.Column="1"
+                                Text="{Binding TokenUnixEpoch}" />
+
+                                <TextBox
+                                Grid.Row="7"
+                                Grid.Column="0"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                IsReadOnly="True"
+                                VerticalAlignment="Center"
                                 VerticalContentAlignment="Center">
                                     $$FORMAT_DATETIME format$$
                                 </TextBox>
                                 <TextBlock
-                                Grid.Row="6"
+                                Grid.Row="7"
                                 Grid.Column="1">
                                     Inserts a custom local date and time format. Replace <Span FontWeight="Bold"><Span FontStyle="Italic">format</Span></Span> with any
                                     <LineBreak />
@@ -769,7 +784,7 @@
                                 </TextBlock>
 
                                 <TextBox
-                                Grid.Row="7"
+                                Grid.Row="8"
                                 Grid.Column="0"
                                 Margin="0,5,0,0"
                                 Background="Transparent"
@@ -780,7 +795,7 @@
                                     $$FORMAT_DATETIME_UTC format$$
                                 </TextBox>
                                 <TextBlock
-                                Grid.Row="7"
+                                Grid.Row="8"
                                 Grid.Column="1"
                                 Margin="0,5,0,0">
                                     Same as <Span FontWeight="Bold">$$FORMAT_DATETIME <Span FontStyle="Italic">format</Span>$$</Span> but uses UTC date and time instead
