--- a/Options.xaml
+++ b/Options.xaml
@@ -706,6 +706,28 @@
                                             Text="{Binding MqttLwtLastWillPayload}" />
                                     </StackPanel>
                                 </TabItem>
+
+                                <TabItem Header="Close payload" Name="Close_payload">
+                                    <StackPanel Orientation="Vertical" Margin="0,10,0,0">
+                                        <TextBlock
+                                            HorizontalAlignment="Left"
+                                            Width="110">
+                                            <TextBlock.Text>Payload text</TextBlock.Text>
+                                        </TextBlock>
+                                        <TextBox
+                                            MinWidth="515"
+                                            MaxWidth="515"
+                                            MinHeight="400"
+                                            MaxHeight="400"
+                                            HorizontalScrollBarVisibility="Visible"
+                                            VerticalScrollBarVisibility="Visible"
+                                            Margin="0,5,0,0"
+                                            AcceptsReturn="True"
+                                            AcceptsTab="True"
+                                            HorizontalAlignment="Left"
+                                            Text="{Binding MqttLwtClosePayload}" />
+                                    </StackPanel>
+                                </TabItem>
                             </TabControl>
                         </StackPanel>
                     </GroupBox>
