--- a/Email/SendToEmailTemplate.xaml
+++ b/Email/SendToEmailTemplate.xaml
@@ -12,6 +12,7 @@
     xmlns:local="clr-namespace:DaleGhent.NINA.GroundStation.SendToEmail"
     xmlns:mini="clr-namespace:NINA.View.Sequencer.MiniSequencer;assembly=NINA.Sequencer"
     xmlns:nina="clr-namespace:NINA.View.Sequencer;assembly=NINA.Sequencer">
+
     <GeometryGroup x:Key="Email_SVG">
         <PathGeometry Figures="M 612 591.7 C 556.7 636 522.2 658 487.8 658 c -33 0 -66.4 -20.6 -118 -60.8 L 62.7 867.5 H 927.6 L 615.5 589.1 c -1.2 0.8 -2.5 1.9 -3.5 2.6 z" FillRule="NonZero" />
         <PathGeometry Figures="M 247.7 502.7 C 174.8 446.5 90.7 381.5 10 317.6 v 509.5 c 0 1.6 0.8 3 0.9 4.5 L 320.5 559.1 c -22.4 -17.5 -46.5 -36 -72.8 -56.4 z" FillRule="NonZero" />
@@ -20,7 +21,7 @@
     </GeometryGroup>
 
     <DataTemplate DataType="{x:Type local:SendToEmail}">
-        <nina:SequenceBlockView DataContext="{Binding}">
+        <nina:SequenceBlockView>
             <nina:SequenceBlockView.SequenceItemContent>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock VerticalAlignment="Center" Text="Recipient" />
