--- a/MQTT/FailuresToMqttTriggerTemplate.xaml
+++ b/MQTT/FailuresToMqttTriggerTemplate.xaml
@@ -12,6 +12,7 @@
     xmlns:local="clr-namespace:DaleGhent.NINA.GroundStation.FailuresToMqttTrigger"
     xmlns:mini="clr-namespace:NINA.View.Sequencer.MiniSequencer;assembly=NINA.Sequencer"
     xmlns:nina="clr-namespace:NINA.View.Sequencer;assembly=NINA.Sequencer">
+
     <GeometryGroup x:Key="Mqtt_SVG">
         <PathGeometry Figures="M7.1 180.6v117.1c0 8.4 6.8 15.3 15.3 15.3H142C141 239.8 80.9 180.7 7.1 180.6z" FillRule="NonZero" />
         <PathGeometry Figures="M7.1 84.1v49.8c99 0.9 179.4 80.7 180.4 179.1h51.7C238.2 186.6 134.5 84.2 7.1 84.1z" FillRule="NonZero" />
@@ -20,7 +21,7 @@
     </GeometryGroup>
 
     <DataTemplate DataType="{x:Type local:FailuresToMqttTrigger}">
-        <nina:SequenceBlockView DataContext="{Binding}">
+        <nina:SequenceBlockView>
             <nina:SequenceBlockView.SequenceItemContent>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock VerticalAlignment="Center" Text="Topic" />
@@ -47,7 +48,7 @@
     </DataTemplate>
 
     <DataTemplate x:Key="DaleGhent.NINA.GroundStation.FailuresToMqttTrigger.FailuresToMqttTrigger_Mini">
-        <mini:MiniTrigger DataContext="{Binding}">
+        <mini:MiniTrigger>
             <mini:MiniTrigger.TriggerProgressContent>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock VerticalAlignment="Center" Text="Failures to MQTT" />
